// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Snackbar> renders 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  pointerEvents="auto"
  style={
    Array [
      Object {
        "position": "absolute",
        "width": "100%",
        "zIndex": 2,
      },
      Object {
        "bottom": 0,
      },
    ]
  }
>
  <View
    style={Object {}}
  >
    <View
      style={
        Array [
          undefined,
          Object {
            "backgroundColor": "#000000",
          },
          undefined,
        ]
      }
    >
      <View
        alignItems="center"
        pointerEvents="auto"
        style={
          Array [
            Object {
              "display": "flex",
              "flexDirection": "row",
              "height": "auto",
              "width": "100%",
            },
            Object {
              "alignItems": "center",
            },
            Object {
              "justifyContent": "flex-start",
            },
            undefined,
            undefined,
          ]
        }
      >
        <View
          style={
            Object {
              "display": "flex",
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#191919",
                  "fontFamily": undefined,
                },
                Object {
                  "fontSize": 12,
                },
                undefined,
                undefined,
                undefined,
                Object {
                  "color": "#ffffff",
                },
                undefined,
              ]
            }
          >
            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
          </Text>
        </View>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`<Snackbar> when {color} 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  pointerEvents="auto"
  style={
    Array [
      Object {
        "position": "absolute",
        "width": "100%",
        "zIndex": 2,
      },
      Object {
        "bottom": 0,
      },
    ]
  }
>
  <View
    style={
      Object {
        "transform": Array [
          Object {
            "translateY": 0,
          },
        ],
      }
    }
  >
    <View
      style={
        Array [
          undefined,
          Object {
            "backgroundColor": "#191919",
          },
          undefined,
        ]
      }
    >
      <View
        alignItems="center"
        pointerEvents="auto"
        style={
          Array [
            Object {
              "display": "flex",
              "flexDirection": "row",
              "height": "auto",
              "width": "100%",
            },
            Object {
              "alignItems": "center",
            },
            Object {
              "justifyContent": "flex-start",
            },
            undefined,
            undefined,
          ]
        }
      >
        <View
          style={
            Object {
              "display": "flex",
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#191919",
                  "fontFamily": undefined,
                },
                Object {
                  "fontSize": 12,
                },
                undefined,
                undefined,
                undefined,
                Object {
                  "color": "#ffffff",
                },
                undefined,
              ]
            }
          >
            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
          </Text>
        </View>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`<Snackbar> when {icon} 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  pointerEvents="auto"
  style={
    Array [
      Object {
        "position": "absolute",
        "width": "100%",
        "zIndex": 2,
      },
      Object {
        "bottom": 0,
      },
    ]
  }
>
  <View
    style={Object {}}
  >
    <View
      style={
        Array [
          undefined,
          Object {
            "backgroundColor": "#000000",
          },
          undefined,
        ]
      }
    >
      <View
        alignItems="center"
        pointerEvents="auto"
        style={
          Array [
            Object {
              "display": "flex",
              "flexDirection": "row",
              "height": "auto",
              "width": "100%",
            },
            Object {
              "alignItems": "center",
            },
            Object {
              "justifyContent": "flex-start",
            },
            undefined,
            undefined,
          ]
        }
      >
        <Text />
        <View
          style={
            Object {
              "display": "flex",
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#191919",
                  "fontFamily": undefined,
                },
                Object {
                  "fontSize": 12,
                },
                undefined,
                undefined,
                undefined,
                Object {
                  "color": "#ffffff",
                },
                undefined,
              ]
            }
          >
            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
          </Text>
        </View>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`<Snackbar> when {onClose} 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  pointerEvents="auto"
  style={
    Array [
      Object {
        "position": "absolute",
        "width": "100%",
        "zIndex": 2,
      },
      Object {
        "bottom": 0,
      },
    ]
  }
>
  <View
    style={
      Object {
        "transform": Array [
          Object {
            "translateY": 0,
          },
        ],
      }
    }
  >
    <View
      style={
        Array [
          undefined,
          Object {
            "backgroundColor": "#000000",
          },
          undefined,
        ]
      }
    >
      <View
        alignItems="center"
        pointerEvents="auto"
        style={
          Array [
            Object {
              "display": "flex",
              "flexDirection": "row",
              "height": "auto",
              "width": "100%",
            },
            Object {
              "alignItems": "center",
            },
            Object {
              "justifyContent": "flex-start",
            },
            undefined,
            undefined,
          ]
        }
      >
        <View
          style={
            Object {
              "display": "flex",
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#191919",
                  "fontFamily": undefined,
                },
                Object {
                  "fontSize": 12,
                },
                undefined,
                undefined,
                undefined,
                Object {
                  "color": "#ffffff",
                },
                undefined,
              ]
            }
          >
            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
          </Text>
        </View>
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onLayout={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          pointerEvents="box-only"
          style={
            Array [
              undefined,
              Array [
                Object {
                  "alignContent": "center",
                  "alignItems": "center",
                  "justifyContent": "center",
                  "overflow": "hidden",
                  "width": "auto",
                },
                undefined,
                Object {
                  "height": 32,
                  "paddingHorizontal": 8,
                },
                undefined,
                Object {
                  "backgroundColor": "#000000",
                  "borderRadius": 0,
                },
                Object {
                  "alignSelf": "center",
                },
              ],
              Array [
                Object {
                  "alignContent": "center",
                  "alignItems": "center",
                  "justifyContent": "center",
                  "overflow": "hidden",
                  "width": "auto",
                },
                undefined,
                Object {
                  "height": 32,
                  "paddingHorizontal": 8,
                },
                undefined,
                Object {
                  "backgroundColor": "#000000",
                  "borderRadius": 0,
                },
                Object {
                  "alignSelf": "center",
                },
              ],
            ]
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#62e6ac",
                "height": "100%",
                "left": 0,
                "opacity": 0.3,
                "position": "absolute",
                "width": 0,
              }
            }
          />
          <View
            style={
              Array [
                Object {
                  "display": "flex",
                  "flexDirection": "row",
                  "height": "auto",
                  "width": "100%",
                },
                Object {
                  "alignItems": "center",
                },
                Object {
                  "justifyContent": "center",
                },
                Object {
                  "width": "auto",
                },
                undefined,
              ]
            }
          >
            <Text />
          </View>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "bottom": 0,
                  "left": 0,
                  "overflow": "hidden",
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "zIndex": 1,
                },
                0,
              ]
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#62e6ac",
                  "height": 0,
                  "opacity": 0,
                  "width": 0,
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`<Snackbar> when {visible} (false) 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  pointerEvents="none"
  style={
    Array [
      Object {
        "position": "absolute",
        "width": "100%",
        "zIndex": 2,
      },
      Object {
        "bottom": 0,
      },
    ]
  }
>
  <View
    style={Object {}}
  >
    <View
      style={
        Array [
          undefined,
          Object {
            "backgroundColor": "#000000",
          },
          undefined,
        ]
      }
    >
      <View
        alignItems="center"
        pointerEvents="auto"
        style={
          Array [
            Object {
              "display": "flex",
              "flexDirection": "row",
              "height": "auto",
              "width": "100%",
            },
            Object {
              "alignItems": "center",
            },
            Object {
              "justifyContent": "flex-start",
            },
            undefined,
            undefined,
          ]
        }
      >
        <View
          style={
            Object {
              "display": "flex",
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#191919",
                  "fontFamily": undefined,
                },
                Object {
                  "fontSize": 12,
                },
                undefined,
                undefined,
                undefined,
                Object {
                  "color": "#ffffff",
                },
                undefined,
              ]
            }
          >
            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
          </Text>
        </View>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;
